@startuml
'https://plantuml.com/class-diagram


class MainActivity extends AppCompatActivity{
    Wave cWave
    CardView mCard

    ResultView mResults;
    SubResultView mSubResults
    HeaderView mHeader;

        TextView actionTV;
        ActionButton actionBtn;
        ShareButton shareBtn;
        SaveButton saveBtn;

        SpeedManager sm;

        Handler handler;
        Runnable task;

        final static int MEASURING_DELAY = 200;
        final static int TASK_DELAY = 1000;


    protected void onCreate(Bundle savedInstanceState)
    private void init()

    public void onClick(View v)

    private List<String> readSpeedFromAssetsCSV(String filename)

    

    private void measureDownloadSpeed()
    private void measureUploadSpeed()
    private void stopMeasuring()

    public void onPlayUI()
    public void onStopUI()
    private void onResultUI(String downloadSpeed, String uploadSpeed, String ping)


    private String getSpeedString(Pair<Integer, Integer> speed)

}

class ActionButton extends androidx.appcompat.widget.AppCompatButton {

    public ActionButton(Context context, AttributeSet attrs)

    public void setStop()

    public void setPlay()

    public void setStart()

    public void setRestart()
    }

class SaveButton extends androidx.appcompat.widget.AppCompatButton {
    public SaveButton(Context context, AttributeSet attrs)

    private void saveTask()

}

class ShareButton extends androidx.appcompat.widget.AppCompatButton {
    public ShareButton(Context context, AttributeSet attrs)

    private void shareTask()

}


class CardView extends LinearLayout {

    TextView integerSpeedTV;
    TextView fractionSpeedTV;
    TextView pingTV;

    TextView dotCaption;
    TextView mbpsCaption;
    TextView pingCaption;

    Wave mWave;

    String mStatus;


    public CardView(Context context, AttributeSet attrs)
    private void init()
    private void parseAttrs(Context context, AttributeSet attrs)

    private void setPing(int ping)
    private void setIntegerSpeed(int speed)
    private void setFractionSpeed(int speed)

    private void setDrawableStatus()
    private void setStatus(String status)

    public void setInstantSpeed(int integerSpeed, int fractionSpeed)


    public void setDefaultCaptions()
    public void setEmptyCaptions()
    public void setMessage(String msg)

    public String getPing()
    public Wave getWave()
    }



class HeaderView extends LinearLayout {

    boolean isActiveReturnBtn;
    boolean isActiveButtonGroup;
    String sectionNameStr;

    Button returnBtn;
    Button historyBtn;
    Button modeBtn;

    TextView sectionNameTV;

    public HeaderView(Context context, AttributeSet attrs)

    private void init()

    private void parseAttrs(Context context, AttributeSet attrs)

    private void goToStart(Context context)

    private void goToHistory(Context context)

    private void goToDev(Context context)

    private void changeStateButtonGroup(boolean flag)

    private void changeVisibilityReturnBtn(boolean flag)

    public void disableButtonGroup()

    public void enableButtonGroup()

    public void setSectionName(String sectionName)

    public void hideReturnBtn()

    public void showReturnBtn()
    }


    class ResultView extends TableLayout {

        TextView downloadSpeedTV;
        TextView uploadSpeedTV;
        TextView pingTV;

        public ResultView(Context context, AttributeSet attrs)
        private void init()


        public void setDownloadSpeed(String speed)
        public void setUploadSpeed(String speed)
        public void setPing(String ping)
        }


      class SubResultView extends LinearLayout {

         TextView downloadSpeedTV;
         TextView uploadSpeedTV;

         public SubResultView(Context context, AttributeSet attrs)
         private void init()

         public void setUploadSpeed(String speed)
         public void setDownloadSpeed(String speed)


         public String getDownloadSpeed()
         public String getUploadSpeed()


         public void setEmpty()
     }

     class SpeedManager {
         public List<String> uploadList;
         public List<String> downloadList;

         public SpeedManager(List<String> list)


         private Pair<Integer, Integer> convertBitToMbps(String speed)


         public Pair<Integer, Integer> getSpeedWithPrecision(String strSpeed, int precision)


         private Pair<Integer, Integer> getAverageSpeed(List<String> list)
         public Pair<Integer, Integer> getAverageUploadSpeed()
         public Pair<Integer, Integer> getAverageDownloadSpeed()
     }

class Wave extends View {

    private Paint mPaint;
    private RectF mRect;

    private int currentSpeed;


    public Wave(Context context, @Nullable AttributeSet attrs)

    private void init()

    public void onDraw(Canvas canvas)

    public void attachSpeed(int speed)

    public void attachColor(int color)


}

MainActivity *-- HeaderView
MainActivity *-- CardView
MainActivity *-- SubResultView
MainActivity *-- ResultView

MainActivity *-- ShareButton
MainActivity *-- SaveButton
MainActivity *-- ActionButton

CardView *-- Wave

MainActivity *-- SpeedManager


@enduml

